# Scraping_Bancos_Mx

./: .gitignore  README.md  benchmark_bbva.py  pyproject.toml  requirements.txt  setup.py
Scraping_Bancos_MX/: Funciones_Afirme.py  Funciones_Azteca.py  Funciones_BBVA.py  Funciones_BanBajio.py  Funciones_BanRegio.py  Funciones_Banamex.py  Funciones_Bancoppel.py  Funciones_Banjercito.py  Funciones_Banorte.py  Funciones_HSBC.py  Funciones_HeyBanco.py  Funciones_Inbursa.py  Funciones_MercadoPago.py  Funciones_Nu.py  Funciones_Santander.py  Funciones_Scotiabank.py  __init__.py
